--- a/src/layout/SideMenu/SideMenu.scss
+++ b/src/layout/SideMenu/SideMenu.scss
@@ -1,21 +1,22 @@
+@import 'scss/variables';
+
 .sidemenu {
+  box-shadow: 0px 1px 3px 1px rgba(26, 35, 126, 0.15),
+  0px 1px 2px 0px rgba(26, 36, 126, 0.3);
   position: relative;
-  min-width: 272px;
+  min-width: $sidemenu-width;
+  z-index: 2;
 }
 
 .sidemenu-content {
   background: #ffffff;
   box-sizing: border-box;
-  box-shadow: 0px 1px 3px 1px rgba(26, 35, 126, 0.15),
-  0px 1px 2px 0px rgba(26, 36, 126, 0.3);
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 96px);
+  height: calc(100vh - $nav-height);
   padding: 32px 16px;
-  position: fixed;
   transition: 0.3s ease-in-out;
   width: 272px;
-  z-index: 2;
 
   .completion-overflow-btn {
     align-self: center;
